Refine CLI task for component import and update unit test.