@@ -1,27 +1,30 @@
 package js.wood.cli.compo;
 
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.io.IOException;
-import java.net.URL;
+import java.io.StringReader;
+import java.io.StringWriter;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.file.FileVisitResult;
+import java.nio.file.FileVisitor;
 import java.nio.file.Path;
 
 import javax.xml.xpath.XPathExpressionException;
 
-import org.apache.http.HttpEntity;
-import org.apache.http.StatusLine;
-import org.apache.http.client.methods.CloseableHttpResponse;
-import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.impl.client.HttpClientBuilder;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import org.xml.sax.SAXException;
@@ -30,8 +33,8 @@ import com.jslib.commons.cli.Config;
 import com.jslib.commons.cli.Console;
 import com.jslib.commons.cli.ExitCode;
 import com.jslib.commons.cli.FilesUtil;
+import com.jslib.commons.cli.HttpRequest;
 
-import js.dom.Document;
 import js.dom.DocumentBuilder;
 import js.util.Classes;
 
@@ -43,6 +46,8 @@ public class CompoImportTest {
 	private Console console;
 	@Mock
 	private FilesUtil files;
+	@Mock
+	private HttpRequest httpRequest;
 
 	@Mock
 	private Path repositoryDir;
@@ -53,38 +58,35 @@ public class CompoImportTest {
 	@Mock
 	private Path projectCompoDir;
 	@Mock
-	private CompoCoordinates compoCoordinates;
+	private Path descriptorFile;
 	@Mock
-	private DocumentBuilder documentBuilder;
-
-	@Mock
-	private HttpClientBuilder httpClientBuilder;
-	@Mock
-	private CloseableHttpClient httpClient;
-	@Mock
-	private CloseableHttpResponse httpResponse;
-	@Mock
-	private HttpEntity httpEntity;
-	@Mock
-	private StatusLine statusLine;
+	private Path scriptFile;
 
 	private CompoImport task;
 
 	@Before
-	public void beforeTest() throws IOException, SAXException {
-		when(config.get("repository.dir")).thenReturn("/home/user/repository");
-		when(config.get("repository.url")).thenReturn("http://server.com");
+	public void beforeTest() throws IOException, SAXException, XPathExpressionException, URISyntaxException {
+		when(config.getex("repository.dir")).thenReturn("/home/user/repository");
+		when(config.getex("repository.url")).thenReturn("http://server.com");
 
-		when(compoCoordinates.getArtifactId()).thenReturn("dialog");
-		when(compoCoordinates.toFile()).thenReturn("com/js-lib/web/dialog/1.0");
-		when(compoCoordinates.toPath()).thenReturn("com/js-lib/web/dialog/1.0");
+		when(console.input("local path")).thenReturn("res/compo/dialog");
+		when(console.confirm(anyString(), anyString())).thenReturn(true);
+
+		String descriptor = "" + //
+				"<compo>" + //
+				"</compo>";
+		when(files.getReader(descriptorFile)).thenReturn(new StringReader(descriptor)).thenReturn(new StringReader(descriptor));
+		when(files.getWriter(descriptorFile)).thenReturn(new StringWriter());
 
 		when(files.getPath("/home/user/repository")).thenReturn(repositoryDir);
 		when(repositoryDir.resolve("com/js-lib/web/dialog/1.0")).thenReturn(repositoryCompoDir);
+		when(repositoryCompoDir.resolve("dialog.xml")).thenReturn(descriptorFile);
+		when(files.exists(descriptorFile)).thenReturn(true);
 
 		when(files.getProjectDir()).thenReturn(projectDir);
 		when(projectDir.resolve("res/compo/dialog")).thenReturn(projectCompoDir);
-		when(projectCompoDir.resolve("dialog")).thenReturn(projectCompoDir);
+		when(files.getFileName(projectCompoDir)).thenReturn("dialog");
+		when(projectCompoDir.resolve("dialog.xml")).thenReturn(descriptorFile);
 
 		String indexPage = "" + //
 				"<home>" + //
@@ -92,106 +94,59 @@ public class CompoImportTest {
 				"	<a href='dialog.htm'>file</a>" + //
 				"	<footer><a href='http://server.com/home.htm'>home.htm</a></footer>" + //
 				"</home>";
-		when(documentBuilder.loadHTML(new URL("http://server.com/com/js-lib/web/dialog/1.0/"))).thenReturn(parseHTML(indexPage));
-
-		when(httpClientBuilder.build()).thenReturn(httpClient);
-		when(httpClient.execute(any())).thenReturn(httpResponse);
-		when(httpResponse.getStatusLine()).thenReturn(statusLine);
-		when(statusLine.getStatusCode()).thenReturn(200);
-		when(httpResponse.getEntity()).thenReturn(httpEntity);
+		DocumentBuilder builder = Classes.loadService(DocumentBuilder.class);
+		when(httpRequest.loadHTML(any())).thenReturn(builder.parseHTML(indexPage));
 
 		task = new CompoImport();
 		task.setConfig(config);
 		task.setConsole(console);
 		task.setFiles(files);
-		task.setCoordinates(compoCoordinates);
-		task.setPath("res/compo/dialog");
-		task.setDocumentBuilder(documentBuilder);
-		task.setHttpClientBuilder(httpClientBuilder);
-	}
+		task.setHttpRequest(httpRequest);
 
-	private static Document parseHTML(String document) throws SAXException {
-		DocumentBuilder builder = Classes.loadService(DocumentBuilder.class);
-		return builder.parseHTML(document);
+		task.setCoordinates(new CompoCoordinates("com.js-lib.web", "dialog", "1.0"));
+		task.setPath("res/compo/dialog");
 	}
 
 	@Test
-	public void GivenDefaultOptionsAndUserConfirm_ThenCopyCompoFiles() throws Exception {
+	public void GivenTestSetup_ThenDownloadComponentFiles() throws Exception {
 		// given
-		when(console.confirm(anyString(), anyString())).thenReturn(true);
-		task.setVerbose(true);
 
 		// when
 		ExitCode exitCode = task.exec();
 
 		// then
 		assertThat(exitCode, equalTo(ExitCode.SUCCESS));
-		verify(files, times(1)).cleanDirectory(projectCompoDir, true);
-		verify(files, times(1)).copyFiles(repositoryCompoDir, projectCompoDir, true);
-	}
+		
+		verify(httpRequest, times(1)).loadHTML(any());
+		verify(httpRequest, times(1)).download(any(), any());
 
-	@Test
-	public void GivenProjectCompoDirExist_ThenDoNotCreateIt() throws IOException, XPathExpressionException, SAXException {
-		// given
-		when(files.exists(projectCompoDir)).thenReturn(true);
-
-		// when
-		task.exec();
-
-		// then
-		verify(files, times(0)).createDirectory(projectCompoDir);
-	}
-
-	@Test
-	public void GivenReloadOption_ThenDownloadComponent() throws Exception {
-		// given
-		task.setReload(true);
-
-		// when
-		task.exec();
-
-		// then
-		verify(files, times(1)).cleanDirectory(repositoryCompoDir, false);
-		verify(documentBuilder, times(1)).loadHTML(new URL("http://server.com/com/js-lib/web/dialog/1.0/"));
-	}
-
-	@Test
-	public void GivenReloadOptionAndRepositoryCompoDirExist_ThenDoNotCreateDirectory() throws Exception {
-		// given
-		task.setReload(true);
-
-		// when
-		task.exec();
-
-		// then
-		verify(files, times(0)).createDirectory(repositoryCompoDir);
-	}
-
-	@Test
-	public void GivenNotReloadAndRepositoryCompoNotExist_ThenCreateDirectoryAndDownload() throws IOException, XPathExpressionException, SAXException {
-		// given
-		when(files.exists(repositoryCompoDir)).thenReturn(false);
-		task.setReload(false);
-
-		// when
-		task.exec();
-
-		// then
 		verify(files, times(1)).createDirectories(repositoryCompoDir);
-		verify(documentBuilder, times(1)).loadHTML(new URL("http://server.com/com/js-lib/web/dialog/1.0/"));
+		verify(files, times(1)).cleanDirectory(repositoryCompoDir, false);
+		verify(files, times(1)).createDirectory(projectCompoDir);
 	}
 
 	@Test
-	public void GivenNotReloadAndRepositoryCompoExist_ThenDoNotDownload() throws IOException, XPathExpressionException, SAXException {
+	public void GivenNullCoordinates_ThenLoadThemFromIndexPage() throws Exception {
 		// given
-		when(files.exists(repositoryCompoDir)).thenReturn(true);
-		task.setReload(false);
+		task.setCoordinates(null);
+
+		when(console.input("component group")).thenReturn("com.js-lib.web");
+		when(console.input("component artifact")).thenReturn("dialog");
+		when(console.input("component version")).thenReturn("1.0");
 
 		// when
-		task.exec();
+		ExitCode exitCode = task.exec();
 
 		// then
-		verify(documentBuilder, times(0)).loadHTML(new URL("http://server.com/com/js-lib/web/dialog/1.0/"));
+		assertThat(exitCode, equalTo(ExitCode.SUCCESS));
+
+		verify(httpRequest, times(1)).getApacheDirectoryIndex(eq(URI.create("http://server.com/com/js-lib/web/")), any());
+		verify(httpRequest, times(1)).getApacheDirectoryIndex(eq(URI.create("http://server.com/com/js-lib/web/dialog/")), any());
+		
+		assertThat(task.getCoordinates(), notNullValue());
+		assertThat(task.getCoordinates().getGroupId(), equalTo("com.js-lib.web"));
+		assertThat(task.getCoordinates().getArtifactId(), equalTo("dialog"));
+		assertThat(task.getCoordinates().getVersion(), equalTo("1.0"));
 	}
 
 	@Test
@@ -205,7 +160,108 @@ public class CompoImportTest {
 		// then
 		assertThat(exitCode, equalTo(ExitCode.CANCEL));
 		verify(console, times(1)).print("User cancel.");
-		verify(files, times(0)).cleanDirectory(projectCompoDir, false);
-		verify(files, times(0)).copyFiles(repositoryCompoDir, projectCompoDir, false);
+
+		verify(httpRequest, times(0)).loadHTML(any());
+		verify(httpRequest, times(0)).download(any(), any());
+	}
+
+	@Test
+	public void GivenProjectCompoDirExist_ThenDoNotCreateIt() throws Exception {
+		// given
+		when(files.exists(projectCompoDir)).thenReturn(true);
+
+		// when
+		task.exec();
+
+		// then
+		verify(files, times(0)).createDirectory(projectCompoDir);
+	}
+
+	@Test
+	public void GivenRepositoryCompoDirExist_ThenDoNotCreateIt() throws Exception {
+		// given
+		when(files.exists(repositoryCompoDir)).thenReturn(true);
+
+		// when
+		task.exec();
+
+		// then
+		verify(files, times(0)).createDirectory(repositoryCompoDir);
+	}
+
+	@Test
+	public void GivenNotReloadAndRepositoryCompoDirExist_ThenDoNotDownload() throws Exception {
+		// given
+		when(files.exists(repositoryCompoDir)).thenReturn(true);
+		task.setReload(false);
+
+		// when
+		task.exec();
+
+		// then
+		verify(httpRequest, times(0)).loadHTML(any());
+		verify(httpRequest, times(0)).download(any(), any());
+	}
+
+	@Test
+	public void GivenValidParameters_WhenCreateURI_ThenValidURI() {
+		// given
+		String server = "http://maven.js-lib.com/";
+		String[] paths = new String[] { "com.js-lib.web" };
+
+		// when
+		URI uri = CompoImport.URI(server, paths);
+
+		// then
+		assertThat(uri.toString(), equalTo("http://maven.js-lib.com/com/js-lib/web/"));
+	}
+
+	@Test
+	public void GivenComponentDirectory_WhenCompoFile_ThenResolveFileName() {
+		// given
+		Path compoDir = mock(Path.class);
+		when(files.getFileName(compoDir)).thenReturn("geo");
+
+		// when
+		task.compoFile(compoDir, "js");
+
+		// then
+		ArgumentCaptor<String> fileName = ArgumentCaptor.forClass(String.class);
+		verify(compoDir, times(1)).resolve(fileName.capture());
+		assertThat(fileName.getValue(), equalTo("geo.js"));
+	}
+
+	@Test
+	public void GivenCompoCoordinates_WhenProjectCompoDir_ThenWalkProjectFiles() throws IOException {
+		// given
+		CompoCoordinates coordinates = new CompoCoordinates("", "", "");
+
+		// when
+		task.projectCompoDir(coordinates);
+
+		// then
+		verify(files, times(1)).walkFileTree(eq(projectDir), any());
+	}
+
+	@Test
+	public void GivenProjectCompoDirVisitorCapture_WhenPreVisitDirectory_ThenTerminateWalking() throws Exception {
+		// given
+		CompoCoordinates coordinates = new CompoCoordinates();
+		task.projectCompoDir(coordinates);
+
+		@SuppressWarnings("unchecked")
+		ArgumentCaptor<FileVisitor<Path>> visitorArgument = ArgumentCaptor.forClass(FileVisitor.class);
+		verify(files, times(1)).walkFileTree(eq(projectDir), visitorArgument.capture());
+
+		Path dir = mock(Path.class);
+		when(files.getFileName(dir)).thenReturn("geo");
+		when(dir.resolve("geo.xml")).thenReturn(descriptorFile);
+
+		// when
+		FileVisitor<Path> visitor = visitorArgument.getValue();
+		FileVisitResult result = visitor.preVisitDirectory(dir, null);
+
+		// then
+		assertThat(result, equalTo(FileVisitResult.TERMINATE));
 	}
 }
